<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maps Example</string>

    <string name="title_activity_marker_cluster">Marker Cluster Example</string>
    <string name="title_activity_custom_marker_info_window">Custon Info Window Example</string>
    <string name="title_activity_map_filtering">Map Filtering Example</string>
    <string name="title_activity_map_settings">Map Settings Example</string>
    <string name="title_activity_map_overview">Map Overview Example</string>

    <string name="action_settings">Settings</string>
    <string name="switch_level">Switch Level</string>
    <string name="my_location">My Location</string>
    <string name="mini_map">Mini Map</string>
    <string name="reset">Reset</string>
    <string name="close_detail_pane">Close</string>
    <string name="title_supply_detail">Supply Information</string>
    <string name="pref_mini_map">Mini Map</string>
    <string name="pref_mini_map_summ">Show mini map in bottom-left corner</string>
    <string name="pref_view_area">View Area</string>
    <string name="pref_view_area_stroke_summ">Show outline around view area</string>
    <string name="pref_view_area_stroke_color">View Area Stroke Color</string>
    <string name="pref_circle">Circles</string>
    <string name="pref_fill_color">Fill Color</string>
    <string name="pref_stroke"> Stroke</string>
    <string name="pref_circle_stroke_summ">Show outline around circles</string>
    <string name="pref_stroke_color">Stroke Color</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>

    <!--
         Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll.
    -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--
         When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
    -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>

    <string name="map_filter_other">Other</string>
    <string name="map_filter_work">Work</string>
    <string name="map_filter_home">Home</string>
    <string name="Imperial">Imperial</string>
    <string name="Metric">Metric</string>
    <string name="MPH">mph</string>
    <string name="KM">km</string>
    <string name="km_cm_mm">km/cm/mm</string>
    <string name="km_h_Abbr4">km/h</string>
    <string name="kn">kn</string>
    <string name="KPA">kPa</string>
    <string name="KPH">kph</string>
    <string name="MPerS">m/s</string>
    <string name="Cardinal">Cardinal</string>
    <string name="Degrees">Degrees</string>
    <string name="IN">in</string>
    <string name="in_mi">in/mi</string>
    <string name="MB">mb</string>
    <string name="TwelveHours">12 Hours</string>
    <string name="TwentyFourHours">24 Hours</string>
    <string name="mm_dd">MM/DD</string>
    <string name="dd_mm">DD/MM</string>
    <string name="default_metric">0</string>
    <string name="units">Units</string>
    <string name="basic">Basic</string>
    <string name="advanced">Advanced</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="time_format">Time Format</string>
    <string name="date_format">Date Format</string>
    <string name="secAbbr">sec</string>
    <string name="minAbbr">min</string>
    <string name="hAbbr">h</string>
    <string name='days'>days</string>
    <string name="title_temp">Temperature</string>
    <string name="title_wind_speed">Wind Speed</string>
    <string name="title_temp_units">Temperature Units</string>
    <string name="title_wind_speed_units">Wind Speed Units</string>
    <string name="title_rainfall">Rainfall</string>
    <string name="title_rainfall_units">Rainfall/Snowfall Units</string>
    <string name="title_pressure_units">Pressure Units</string>
    <string name="title_pressure">Pressure</string>

</resources>