<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        android:orderInCategory="0"
       	android:actionViewClass="android.widget.SearchView"
        android:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/myLocation"
        android:checkable="true"
        android:checked="false"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/my_location"/>
    <item
        android:id="@+id/resetMaps"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/reset"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>